--- a/server/package.json
+++ b/server/package.json
@@ -17,6 +17,7 @@
     "crypto": "^1.0.1",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
+    "jimp": "^0.22.8",
     "nodemailer": "^7.0.9",
     "razorpay": "^2.9.6"
   }
